--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <text x="102" y="28" style="font-size:x-large">T</text>
                 <text x="114" y="33" style="font-size:x-large">E</text>
                 <text x="126" y="28" style="font-size:x-large">X</text>
-                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">\(\rm PGFPlots\) 代码生成器</a> · 正在建设中
+                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">\(\rm PGFPlots\) 代码生成器</a> · 招美工
     </div>
     <div class="container" id="app">
         <div class="properties">
