--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     数据
                 </summary>
                 <div id="addtooltip">
-                    <button>+</button>
+                    <button>+ 系列</button>
                     <div id="addbuttons">
                         <button onclick="addexprClick()">函数</button><br>
                         <button onclick="addcoordClick()">坐标</button><br>
@@ -86,21 +86,24 @@
                         <property chname="最小" propkey="zmin"></property>
                         <property chname="最大" propkey="zmax"></property>
                     </div>
-                    <tr><td>增补参数</td><input type="text" v-model="surplusparam"></input></tr>
                 </div>
+                <tr><td>增补参数</td><input type="text" v-model="surplusparam"></input></tr>
             </details>
             <button v-on="{click: compile}">编译</button><br>
             <iframe v-bind:src="curl" id="compilePrev"></iframe>
         </div>
         <div class="textext">
             <textarea v-model="premable"></textarea>
-            <textarea v-model="content">\begin{axis}[{{param}}]
+            <textarea v-model="content" id="texContent">\begin{axis}[{{param}}]
     {{series}}
 \end{axis}</textarea>
-<textarea v-model="suffix"></textarea>
+            <textarea v-model="suffix"></textarea>
+            <button v-clipboard:copy="content">复制图表内容</button>
+            <button v-clipboard:copy="file">复制全部内容</button>
         </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue-clipboard2/0.3.1/vue-clipboard.js"></script>
     <script src="web/js/main.js"></script>
 </body>
 </html>
