--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                     <input type="checkbox" v-model="enableLegend">启用图例</input>
                     <div>
                         <lib :id="1" category="tikz" chname="标记库" libname="plotmarks"></lib>
+                        <lib :id="2" category="pgfplots" chname="颜色库" libname="colorbrewer"></lib>
+                        <lib :id="3" category="pgfplots" chname="统计库" libname="statistics"></lib>
                     </div>
                 </details>
                 <details>
@@ -77,19 +79,19 @@
                             <property chname="图例位置" propkey="legend pos"></property>    
                         </div>
                             <tr>x轴</tr>
-                            <property chname="标签" propkey="xlabel"></property>
+                            <property chname="轴题" propkey="xlabel"></property>
                             <property chname="最小" propkey="xmin"></property>
                             <property chname="最大" propkey="xmax"></property>
                             <property chname="箭头" propkey="axis x line"></property>
                             <tr>y轴</tr>
-                            <property chname="标签" propkey="ylabel"></property>
+                            <property chname="轴题" propkey="ylabel"></property>
                             <property chname="最小" propkey="ymin"></property>
                             <property chname="最大" propkey="ymax"></property>
                             <property chname="箭头" propkey="axis y line"></property>
                         <!-- </table> -->
                         <div v-show="td">
                             <tr>z轴</tr>
-                            <property chname="标签" propkey="zlabel"></property>
+                            <property chname="轴题" propkey="zlabel"></property>
                             <property chname="最小" propkey="zmin"></property>
                             <property chname="最大" propkey="zmax"></property>
                             <property chname="箭头" propkey="axis z line"></property>
@@ -109,7 +111,7 @@
                 <textarea v-model="suffix" readonly="readonly"></textarea>
                 <button v-clipboard:copy="content">复制绘图代码</button>
                 <button v-clipboard:copy="file">复制全部代码</button>
-                <button onclick="gomanual()">手动编辑</button>
+                <button onclick="gomanual()">手动编辑⚠</button>
             </div>
             <textarea id="manualfile" style="display:none; min-height: 450px;"></textarea>
         </div>
