--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         设定
                     </summary>
                     <input type="checkbox" onclick="chnClick(this)" checked="true">启用中文</input>
+                    <input type="checkbox" onclick="pinClick(this)" v-model="enablepin">启用标注</input>
                     <input type="checkbox" v-model="td">启用三维参数</input>
                     <input type="checkbox" v-model="enableLegend">启用图例</input>
                     <div>
@@ -50,6 +51,7 @@
                             <button onclick="addexprClick()">函数</button><br>
                             <button onclick="addcoordClick()">坐标</button><br>
                             <button onclick="addtableClick()">文件</button>
+                            <button onclick="addnodeClick()" v-show="enablepin">标注</button>
                         </div>
                     </div>
                     <div id="exprs">
@@ -65,6 +67,11 @@
                     <div id="tables">
                         <div v-for="comp in tableps">
                             <tablep :id="comp.id"></tablep>
+                        </div>
+                    </div>
+                    <div id="nodes">
+                        <div v-for="comp in nodeps">
+                            <node :id="comp.id"></node>
                         </div>
                     </div>
                 </details>
@@ -106,11 +113,11 @@
         </div>
         <div id="textext">
             <div id="auto">
-                <textarea v-model="premable" readonly="readonly"></textarea>
-                <textarea v-model="content" id="texContent" readonly="readonly">\begin{axis}[{{param}}]
+                <textarea v-model="premable" readonly="readonly" style="min-height: 130px;"></textarea>
+                <textarea v-model="content" id="texContent" readonly="readonly" style="min-height: 200px;">\begin{axis}[{{param}}]
         {{series}}
     \end{axis}</textarea>
-                <textarea v-model="suffix" readonly="readonly"></textarea>
+                <textarea v-model="suffix" readonly="readonly" style="min-height: 50px;"></textarea>
                 <button v-clipboard:copy="content">复制绘图代码</button>
                 <button v-clipboard:copy="file">复制全部代码</button>
                 <button onclick="gomanual()">手动编辑⚠</button>
@@ -159,6 +166,17 @@
             <td><input type="text" class="coord" v-model="fileName" placeholder="数据文件" style="display:none"></td>
             <td><input type="text" class="coord" v-model="datat" @keyup="on_change" placeholder="数据表" style="display:none"></td>
             <td><input type="file" id="files" class="fileChooser" @change="readFile"></td>
+        </tr>
+    </template>
+    <template id="nodetpl">
+        <tr v-show="enabled">
+            <td><button class="deleteBut" @click="deleteComp">X</button></td>
+            <td class="type">标注</td><td><input type="text" class="legend" placeholder="标注" v-model="pin" @keyup="on_change"></td>
+            <!-- <td><input type="checkbox" class="td" @click="ontdchange" v-model="etd">3D</td>
+            <td><input type="checkbox" class="td" @click="onpchange" v-model="plus">+</td>
+            <td><input type="checkbox" class="cycle" @click="oncchange" v-model="cycle">🔄</td> -->
+            <td><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="旋转角度"></td>
+            <td><input type="text" class="coord" v-model="pos" @keyup="on_change" placeholder="标注位置"></td>
         </tr>
     </template>
     <template id="propertyselecttpl">
